--- a/app/src/main/res/layout/activity_found_upload.xml
+++ b/app/src/main/res/layout/activity_found_upload.xml
@@ -20,20 +20,18 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="32dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/imageContainer"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="24dp"
-        app:layout_constraintTop_toBottomOf="@id/titleText">
+        app:layout_constraintTop_toBottomOf="@+id/titleText">
 
         <TextView
             android:id="@+id/noImageText"
@@ -55,34 +53,32 @@
             android:visibility="gone" />
     </FrameLayout>
 
-    <!-- Open Camera Button -->
+
     <Button
         android:id="@+id/openCameraButton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:background="#FFFFFF"
         android:text="Open camera"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@id/imageContainer"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/openGalleryButton"
-        android:layout_marginTop="24dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageContainer" />
 
-    <!-- Open Gallery Button -->
     <Button
         android:id="@+id/openGalleryButton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:layout_marginTop="60dp"
         android:background="#FFFFFF"
         android:text="Open gallery"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@id/imageContainer"
-        app:layout_constraintStart_toEndOf="@id/openCameraButton"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp" />
+        app:layout_constraintStart_toEndOf="@id/openCameraButton"
+        app:layout_constraintTop_toBottomOf="@id/imageContainer" />
 
-    <!-- Go Back Button -->
     <Button
         android:id="@+id/goBackButton"
         android:layout_width="0dp"
