--- a/app/src/main/res/layout/activity_lost_upload.xml
+++ b/app/src/main/res/layout/activity_lost_upload.xml
@@ -20,20 +20,18 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="32dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/imageContainer"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="24dp"
-        app:layout_constraintTop_toBottomOf="@id/titleText">
+        app:layout_constraintTop_toBottomOf="@+id/titleText">
 
         <TextView
             android:id="@+id/noImageText"
