--- a/app/src/main/res/layout/activity_convo_list.xml
+++ b/app/src/main/res/layout/activity_convo_list.xml
@@ -79,44 +79,53 @@
         android:id="@+id/button"
         android:layout_width="336dp"
         android:layout_height="58dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="36dp"
         android:background="#1e1e1e"
         android:text="Water Bottle MKII"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="180dp" />
+        app:layout_constraintTop_toBottomOf="@+id/lost" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="336dp"
         android:layout_height="58dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginTop="68dp"
         android:background="#1e1e1e"
         android:text="Water Bottle MKII"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="336dp"
         android:layout_height="58dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginTop="56dp"
         android:background="#1e1e1e"
         android:text="Water Bottle MKII"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="367dp" />
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
 
     <Button
         android:id="@+id/button10"
         android:layout_width="336dp"
         android:layout_height="58dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginTop="60dp"
         android:background="#1e1e1e"
         android:text="Water Bottle MKII"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="463dp" />
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button9"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
