--- a/app/src/main/res/layout/activity_followup.xml
+++ b/app/src/main/res/layout/activity_followup.xml
@@ -17,7 +17,7 @@
         android:gravity="center_vertical"
         android:text="Has your mom told you that you lost an item today? Uh Ohhhhhhh!!!!!!"
         android:textAlignment="center"
-        android:textSize="18"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
