--- a/app/src/main/res/layout/activity_summary_page.xml
+++ b/app/src/main/res/layout/activity_summary_page.xml
@@ -17,10 +17,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+                android:layout_height="match_parent"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="-131dp">
-
 
             <TextView
                 android:id="@+id/summaryTextView"
@@ -37,22 +36,26 @@
 
             <TextView
                 android:id="@+id/itemTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
+                android:layout_marginLeft="40dp"
+                android:paddingRight="20dp"
                 android:text="Item:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.129"
+                app:layout_constraintHorizontal_bias="0.151"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/summaryTextView" />
 
             <TextView
                 android:id="@+id/categoryTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginLeft="40dp"
+                android:paddingRight="20dp"
                 android:text="Category:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
@@ -62,10 +65,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/itemTextView" />
 
             <TextView
-                android:id="@+id/DateTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/dateTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginLeft="40dp"
+                android:paddingRight="20dp"
                 android:text="Date:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
@@ -75,47 +80,65 @@
                 app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />
 
             <TextView
-                android:id="@+id/LocationTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/locationTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginLeft="40dp"
+                android:paddingRight="20dp"
                 android:text="Location:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.149"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/DateTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
 
             <TextView
-                android:id="@+id/PhotoTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/descriptionTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginLeft="40dp"
+                android:paddingRight="20dp"
+                android:text="Description:"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.149"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
+
+            <TextView
+                android:id="@+id/photoTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="40dp"
                 android:text="Photo:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.149"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/LocationTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
 
             <FrameLayout
                 android:id="@+id/frameLayout2"
                 android:layout_width="280dp"
-                android:layout_height="180dp"
+                android:layout_height="@dimen/fixed_frame_height"
                 android:layout_marginTop="35dp"
                 android:layout_gravity="center"
+                android:background="#ffffff"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/PhotoTextView">
+                app:layout_constraintTop_toBottomOf="@+id/photoTextView">
 
                 <ImageView
                     android:id="@+id/imagePreview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/rounded_edittext"
                     android:contentDescription="Image Preview"
                     android:scaleType="centerCrop"
                     tools:src="@tools:sample/avatars" />
